Added Heat maps

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -1686,6 +1686,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['kovylkino',\n",
+       " 'huarmey',\n",
+       " 'mopti',\n",
+       " 'sistranda',\n",
+       " 'cabo san lucas',\n",
+       " 'kalmunai',\n",
+       " 'machico',\n",
+       " 'tuktoyaktuk',\n",
+       " 'jamestown',\n",
+       " 'wexford']"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = cities[:10]\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
